--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
 code {
@@ -8,4 +10,15 @@ code {
 
 .active {
   border-bottom: 3px solid red;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: "Poppins", sans-serif;
 }
