--- a/src/components/rockets/Rockets.module.css
+++ b/src/components/rockets/Rockets.module.css
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scrollbar-width: thin;
-}
-
 .rockets-section {
   display: flex;
   flex-direction: column;
@@ -16,14 +9,21 @@
   display: flex;
 }
 
-img {
+/* img {
   width: 350px;
+} */
+
+.rocketContainer {
+  display: flex;
+  gap: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
-.rocket-description {
+.rocketDescription {
   display: flex;
   flex-direction: column;
   gap: 1.8rem;
+  justify-content: flex-start;
 }
 
 h2 {
@@ -44,7 +44,7 @@ span {
   margin-right: 10px;
 }
 
-.add-reservation {
+.addReservation {
   width: 15rem;
   height: 4rem;
   font-size: 1.5rem;
@@ -56,7 +56,7 @@ span {
   transition: background-color linear 0.2s;
 }
 
-.remove-reservation {
+.removeReservation {
   width: 16rem;
   height: 4rem;
   font-size: 1.5rem;
@@ -66,4 +66,9 @@ span {
   border-radius: 5px;
   color: gray;
   transition: color linear 0.2s, border-color;
+}
+
+ul.test1 {
+  display: flex;
+  flex-direction: column;
 }
